apps/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  selector:
    app: headscale
  ports:
    - name: http
      targetPort: http
      port: 8080
